add excel work func
